# solus

./: .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  LICENSE.md
android/: README.md  VOSK_SETUP.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/solus/assistant/: MainActivity.kt  SolusApplication.kt
android/app/src/main/java/com/solus/assistant/data/model/: ChatMessage.kt  ChatRequest.kt  ChatResponse.kt  HealthResponse.kt  ServerAction.kt
android/app/src/main/java/com/solus/assistant/data/network/: RetrofitClient.kt  SolusApi.kt
android/app/src/main/java/com/solus/assistant/data/preferences/: SettingsManager.kt
android/app/src/main/java/com/solus/assistant/service/: ActionExecutor.kt  VoiceListenerService.kt
android/app/src/main/java/com/solus/assistant/ui/navigation/: Navigation.kt
android/app/src/main/java/com/solus/assistant/ui/screens/: ChatScreen.kt  MainScreen.kt  SettingsScreen.kt  SetupScreen.kt
android/app/src/main/java/com/solus/assistant/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/solus/assistant/util/: AndroidTTSManager.kt  BeepGenerator.kt  DebugLog.kt  PiperTTSManager.kt  VoskModelDownloader.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
include/llm/: llama_handler.h
include/memory/: database.h
include/server/: config.h  prompt_builder.h  response_parser.h  solus_server.h
scripts/: build.sh  clean.sh  download_model.py  setup_default_model.sh  test.sh
src/: main.cpp
src/llm/: llama_handler.cpp
src/memory/: database.cpp
src/server/: prompt_builder.cpp  response_parser.cpp  solus_server.cpp
tests/: CMakeLists.txt
tests/include/utils/: helpers.h
tests/integration/: test_memory.cpp  test_server.cpp
tests/unit/: test_config.cpp  test_memory_database.cpp  test_prompt_builder.cpp  test_response_parser.cpp
